2010-08-06  Kenichi Handa  <handa@m17n.org>

	* international/mule.el (define-charset): Store NAME as :base
	property.
	(ctext-non-standard-encodings-table): Pay attention to charset
	aliases.
	(ctext-pre-write-conversion): Sort ctext-standard-encodings by the
	current priority.  Force using the designation of the specific
	charset by adding `charset' text property.  Improve the whole
	algorithm.

2010-08-05  Juanma Barranquero  <lekktu@gmail.com>

	* emulation/pc-select.el (pc-selection-mode-hook)
	(copy-region-as-kill-nomark, beginning-of-buffer-mark)
	(pc-selection-mode): Fix typos in docstrings.

2010-08-04  Kenichi Handa  <handa@m17n.org>

	* language/cyrillic.el: Don't add "microsoft-cp1251" to
	ctext-non-standard-encodings-alist here.

	* international/mule.el (ctext-non-standard-encodings-alist): Add
	"koi8-r" and "microsoft-cp1251".
	(ctext-standard-encodings): New variable.
	(ctext-non-standard-encodings-table): List only elements for
	non-standard encodings.
	(ctext-pre-write-conversion): Adjusted for the above change.
	Check ctext-standard-encodings.

	* international/mule-conf.el (compound-text): Doc fix.
	(ctext-no-compositions): Doc fix.
	(compound-text-with-extensions): Doc fix.

2010-08-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (exchange-dot-and-mark): Mark obsolete, finally.

2010-08-03  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/which-func.el (which-func-format): Split help-echo text
	into lines, like other mode-line tooltips.

	* server.el (server-start): When using TCP sockets, force IPv4
	and use a literal 127.0.0.1 for localhost.  (Related to bug#6781.)

2010-08-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* bindings.el (complete-symbol): Run completion-at-point as a fallback.

2010-08-02  Juanma Barranquero  <lekktu@gmail.com>

	* term.el (term-delimiter-argument-list): Reflow docstring.
	(term-read-input-ring, term-write-input-ring, term-send-input)